Dark/light mode should always be visible: make the header fixed.

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,8 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
   padding: 20px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99999;
 
   .dark-theme & {
     background: #222222;
