--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -19,7 +19,7 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 
-  margin: 0;
+  margin: 67px 0 0 0;
   padding: 0;
   font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",  Helvetica, Arial, sans-serif;
   font-display: auto;
